2005-04-12  Bruno Haible  <bruno@clisp.org>

	* weak.tst: Update for change :either -> :key-and-value,
	:both -> :key-or-value.
	* weakhash.tst: Likewise.
	* weakhash2.tst: Likewise.

2005-04-10  Bruno Haible  <bruno@clisp.org>

	* weakhash.tst: Test long chains of weak hash tables.

2005-04-02  Bruno Haible  <bruno@clisp.org>

	* weakhash.tst: New file.
	* weakhash2.tst: Renamed from hashweak.tst.
	* tests.lisp (run-all-tests): Update.

2005-03-31  Bruno Haible  <bruno@clisp.org>

	* weakptr.tst: Portability to ACL 6.2 and LispWorks 4.3.
	* hashweak.tst: Portability to LispWorks 4.3.
	* tests.lisp (run-all-tests): Run weakptr.tst also on ACL, CMUCL, SBCL,
	LispWorks. Run hashweak.tst also on LispWorks.

2005-03-28  Sam Steingold  <sds@gnu.org>

	* ffi.tst (c-self): test the :DOCUMENTATION option to DEF-CALL-OUT

2005-03-26  Sam Steingold  <sds@gnu.org>

	* excepsit.tst ("sys:foo.bar."): fixed the test (parse-namestring
	-> parse-error, logical-pathname -> type-error)

2005-03-22  Sam Steingold  <sds@gnu.org>

	* macro8.tst: bug 1167991 (SP-DEPTH <0)

2005-03-08  Sam Steingold  <sds@gnu.org>

	* excepsit.tst: check that RANDOM does not accept RATIOs

2005-03-06  Sam Steingold  <sds@gnu.org>

	* conditions.tst: added (DEBUG 1) to OPTIMIZE

2005-02-21  Bruno Haible  <bruno@clisp.org>

	* mop.tst: Add a test for method-function.

2005-02-20  Bruno Haible  <bruno@clisp.org>

	* number2.tst: Add tests for exactness of some realparts and
	imagpart of transcendental functions. Add test for accuracy of CIS.

2005-02-14  Sam Steingold  <sds@gnu.org>

	* path.tst: check that we can load "foo.lisp"
	when "foo/" is also present

2005-02-14  Sam Steingold  <sds@gnu.org>

	* macro8.tst: check that declaration processing does not modify code

2005-02-14  Bruno Haible  <bruno@clisp.org>

	* streams.tst: Test FINISH-OUTPUT and FORCE-OUTPUT as well.

2005-02-13  Bruno Haible  <bruno@clisp.org>

	* tests.lisp (do-test): Print a blank line after the "Differ"
	paragraph, not before.
