@@ -171,10 +171,11 @@
                           (incf total-count tot)
                           (list file err tot)))
                       files)))
-    (format t "~&~s: finished ~3d file~:p: ~3:d error~:p out of ~5:d test~:p~%"
-            'run-files (length files) error-count total-count)
+    (format
+     t "~&~s: finished ~3d file~:p: ~3:d error~:p out of~50T ~5:d test~:p~%"
+     'run-files (length files) error-count total-count)
     (loop :for rec :in res :for count :upfrom 1 :do
-      (format t "~&[~d] ~25@a: ~3:d error~:p out of ~5:d test~:p~%" count
+      (format t "~&[~d] ~25@a: ~3:d error~:p out of~50T ~5:d test~:p~%" count
               (enough-namestring (first rec) here) (second rec) (third rec)))
     (values error-count total-count res)))
 
