@@ -1,3 +1,7 @@
+2005-04-18  Sam Steingold  <sds@gnu.org>
+
+	* tests.lisp (run-files): fixed output indentation
+
 2005-04-12  Bruno Haible  <bruno@clisp.org>
 
 	* weak.tst: Update for change :either -> :key-and-value,
